debugging BG darkening issue on iphones

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
     z-index: -1;
     margin: 0;
     padding: 0;
-    box-shadow: inset 0 0 50rem black;
+    box-shadow: inset 0 0 200px black;
 }
 
 .container{
